--- a/stockwatcher-server/pom.xml
+++ b/stockwatcher-server/pom.xml
@@ -32,6 +32,12 @@
       <artifactId>mapdb</artifactId>
       <version>3.0.8</version>
     </dependency>
+      <dependency>
+          <groupId>org.junit.jupiter</groupId>
+          <artifactId>junit-jupiter-api</artifactId>
+          <version>5.9.0</version>
+          <scope>test</scope>
+      </dependency>
 
   </dependencies>
 
