--- a/stockwatcher-server/pom.xml
+++ b/stockwatcher-server/pom.xml
@@ -38,6 +38,11 @@
           <version>5.9.0</version>
           <scope>test</scope>
       </dependency>
+      <dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.10</version>
+		</dependency>
 
   </dependencies>
 
