--- a/noting-server/src/main/webapp/WEB-INF/web.xml
+++ b/noting-server/src/main/webapp/WEB-INF/web.xml
@@ -1,26 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
-  version="2.5">
+<web-app xmlns="http://java.sun.com/xml/ns/javaee"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
+    version="2.5">
 
-	<!-- Servlets -->
-  <servlet>
-    <servlet-name>stockPrices</servlet-name>
-    <servlet-class>com.google.gwt.sample.stockwatcher.server.StockPriceServiceImpl</servlet-class>
-  </servlet>
+    <servlet>
+        <servlet-name>noteService</servlet-name>
+        <servlet-class>com.google.gwt.sample.noting.server.NoteServiceImpl</servlet-class>
+    </servlet>
 
-  <servlet-mapping>
-    <servlet-name>stockPrices</servlet-name>
-    <url-pattern>/app/stockPrices</url-pattern>
-  </servlet-mapping>
-  
-  <listener>
-    <listener-class>com.google.gwt.sample.stockwatcher.server.ListenerImpl</listener-class>
-  </listener>
+    <servlet-mapping>
+        <servlet-name>noteService</servlet-name>
+        <url-pattern>/noting/noteService</url-pattern>
+    </servlet-mapping>
 
-	<!-- Default page to serve -->
-  <welcome-file-list>
-    <welcome-file>StockWatcher.html</welcome-file>
-  </welcome-file-list>
-
+    <welcome-file-list>
+        <welcome-file>NotingApp.html</welcome-file>
+    </welcome-file-list>
 </web-app>
