implementazione DbMap + aggiunta script per avvio terminali

--- a/noting-server/src/main/webapp/WEB-INF/web.xml
+++ b/noting-server/src/main/webapp/WEB-INF/web.xml
@@ -4,6 +4,10 @@
     xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
     version="2.5">
 
+    <listener>
+        <listener-class>com.google.gwt.sample.noting.server.DBManager</listener-class>
+    </listener>
+
     <servlet>
         <servlet-name>noteService</servlet-name>
         <servlet-class>com.google.gwt.sample.noting.server.NoteServiceImpl</servlet-class>
