--- a/noting-server/pom.xml
+++ b/noting-server/pom.xml
@@ -35,7 +35,7 @@
 
     <dependency>
       <groupId>org.junit.jupiter</groupId>
-      <artifactId>junit-jupiter-api</artifactId>
+      <artifactId>junit-jupiter</artifactId>
       <version>5.9.0</version>
       <scope>test</scope>
     </dependency>
@@ -73,6 +73,16 @@
         </plugin>
       </plugins>
     </pluginManagement>
+    <plugins>
+  <plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-surefire-plugin</artifactId>
+    <version>3.2.5</version>
+    <configuration>
+      <useModulePath>false</useModulePath>
+    </configuration>
+  </plugin>
+</plugins>
   </build>
 
   <profiles>
